# mooomoocat-article-rag-agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
bash/k8s/: port-forward.sh  start-deps.sh  stop-deps.sh
docs/: README.md  agent-roles.md  change-documentation-workflow.md  mooomoocat-article-rag-agent-plan.md  orbstack-local-deps.md  progress.md  qdrant-es-hybrid-retrieval-design.md  rag-agent-interview-questions.md
docs/rules/: python-best-practices.md
docs/superpowers/plans/: 2026-05-22-docs-consolidation.md  2026-05-22-intent-recognition.md  2026-05-22-refactor-best-practices.md
docs/superpowers/specs/: 2026-05-22-docs-consolidation-design.md  2026-05-22-intent-recognition-design.md  2026-05-22-refactor-best-practices-design.md
k8s/orbstack/: kustomization.yaml  namespace.yaml
k8s/orbstack/eck/: elasticsearch.yaml
k8s/orbstack/qdrant/: service.yaml  statefulset.yaml
openspec/: config.yaml
openspec/changes/add-intent-recognition/: design.md  proposal.md  tasks.md
openspec/changes/add-qdrant-es-hybrid-retrieval/: design.md  proposal.md  tasks.md
scripts/: verify.sh
src/mooomoocatrag/: cli.py  config.py  models.py  utils.py
src/mooomoocatrag/ingest/: chunker.py  indexer.py  parser.py  scanner.py
tests/: conftest.py  test_chat.py  test_chunker.py  test_cli.py  test_embeddings.py  test_hybrid_smoke.py  test_indexer.py  test_intent_router.py  test_parser.py  test_prompt.py  test_retriever.py  test_scanner.py  test_utils.py  test_vector_store.py
tests/fixtures/: intent_cases.json  sample.md  sample.txt
(+16 files in other folders)
